syntax = "proto3";
 
package feeder;

// option go_package="github.com/accuknox/KubeArmor/protobuf";

// Health check
message NonceMessage {
  int32 nonce = 1;
}

// audit log
message AuditLog {
  string UpdatedTime = 1;

  string HostName = 2;

  string NamespaceName = 3;
  string PodName = 4;

  string ContainerID = 5;
  string ContainerName = 6;

  int32 HostPID = 7;

  string Source = 8;
  string Operation = 9;
  string Resource = 10;
  string Result = 11;

  string RawData = 12;
}

// system log
message SystemLog {
  string UpdatedTime = 1;

  string HostName = 2;

  string NamespaceName = 3;
  string PodName = 4;

  string ContainerID = 5;
  string ContainerName = 6;

  int32 HostPID = 7;
  int32 PPID = 8;
  int32 PID = 9;
  int32 UID = 10;

  string Source = 11;
  string Operation = 12;
  string Resource = 13;
  string Args = 14;
  string Result = 15;
}

// reply message
message ReplyMessage {
  int32 Retval = 1;
}

service LogMessage {
  rpc HealthCheck(NonceMessage) returns (ReplyMessage);
  rpc AuditLogs(stream AuditLog) returns (ReplyMessage);
  rpc SystemLogs(stream SystemLog) returns (ReplyMessage);
}
